tests/cli/testdata/join_unreachable.txtar
# Hub at port 1 is unreachable. CLI must produce a connection error
# without dumping the usage block (this is a runtime error, not malformed input).
stdin nick.txt
! exec hubfuse join 127.0.0.1:1 --token HUB-XXX-YYY
stderr 'error:.*connection refused|error:.*dial hub|error:.*cannot reach'
! stderr 'Usage:'

-- nick.txt --
mytestdevice
